--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,15 +1,16 @@
 plugins {
     id 'com.android.application'
+    id 'com.google.gms.google-services'  // Google Services plugin
 }
 
 android {
-    namespace 'com.example.iqra'
-    compileSdk 32
+    namespace 'com.example.iqra'  // replace with your app's namespace
+    compileSdk 33
 
     defaultConfig {
-        applicationId "com.example.iqra"
+        applicationId "com.example.iqra"  // replace with your app's ID
         minSdk 21
-        targetSdk 32
+        targetSdk 33
         versionCode 1
         versionName "1.0"
 
@@ -22,23 +23,29 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
-    }
 }
 
 dependencies {
+    implementation 'androidx.core:core-ktx:1.9.0'
 
-    implementation 'androidx.appcompat:appcompat:1.4.1'
+
+    implementation 'com.google.firebase:firebase-analytics:21.0.0'
+
     implementation 'com.google.android.material:material:1.5.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
     implementation 'androidx.appcompat:appcompat:1.4.1'
-//    implementation 'com.github.barteksc:android-pdf-viewer:2.8.2'
     implementation 'com.github.mhiew:android-pdf-viewer:3.2.0-beta.1'
     implementation 'com.karumi:dexter:6.2.2'
+
+    // Firebase BoM (Bill of Materials) to automatically manage Firebase versioning
+    implementation platform('com.google.firebase:firebase-bom:32.2.0')
+
+    // Firebase services
+    implementation 'com.google.firebase:firebase-storage'
+    implementation 'com.google.firebase:firebase-auth'
+    implementation 'com.google.firebase:firebase-database'
+
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-
 }
